Format code with Prettier

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       id-token: write # Required for AWS OIDC authentication
-      contents: read  # Required to check out the repository
+      contents: read # Required to check out the repository
 
     steps:
       - name: Checkout Repository
@@ -24,8 +24,8 @@ jobs:
         # This step sets up Node.js, which is needed for our validation tools (Prettier, ESLint)
         uses: actions/setup-node@v4
         with:
-          node-version: "20" # Use a current LTS version of Node.js
-          cache: "npm" # Caches npm packages to speed up future runs
+          node-version: '20' # Use a current LTS version of Node.js
+          cache: 'npm' # Caches npm packages to speed up future runs
 
       - name: Install Project Dependencies
         # Installs the tools defined in your package.json (e.g., prettier, eslint)
