--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,34 +21,32 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Node.js environment
-        # This step sets up Node.js, which is needed for our validation tools (Prettier, ESLint)
         uses: actions/setup-node@v4
         with:
-          node-version: '20' # Use a current LTS version of Node.js
-          cache: 'npm' # Caches npm packages to speed up future runs
+          node-version: '20'
+          cache: 'npm'
 
       - name: Install Project Dependencies
-        # Installs the tools defined in your package.json (e.g., prettier, eslint)
         run: npm ci
 
-      # --- VALIDATION STEPS ---
+      # --- VALIDATION STEPS (Run on all triggers) ---
       - name: Check Code Formatting with Prettier
-        # Verifies that all HTML, CSS, and JS files match the defined formatting rules
         run: npx prettier --check .
 
       - name: Lint JavaScript with ESLint
-        # Analyzes JavaScript files for potential errors and bad practices
         run: npx eslint .
 
-      # --- DEPLOYMENT STEPS ---
+      # --- DEPLOYMENT STEPS (Only run on push to main) ---
       - name: Configure AWS Credentials
+        # This 'if' condition ensures this step only runs for pushes to the main branch
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: arn:aws:iam::767828739298:role/GitHubAction-AssumeRoleWithAction
           aws-region: eu-west-2
 
       - name: Deploy Files to S3
-        # The 'sync' command is efficient. It only uploads changed files and can remove files
-        # from the bucket that are no longer in your repository.
+        # This 'if' condition ensures this step only runs for pushes to the main branch
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: |
           aws s3 sync . s3://www.craighoad.com/ --delete
